# Expense-Forecasting

./: .env.example  .gitignore  package-lock.json  pyproject.toml  supabase_schema.sql
backend/: create_tables.sql  database.py  forecasting.py  main.py  services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CashFlowChart.jsx  Dashboard.jsx  FileUpload.jsx  Metrics.jsx  ScenarioSimulator.jsx
